[package]
name = "platformsh-tools"
version = "0.1.0"
edition = "2021"
authors = ["Christian Borup <borup@adaptagency.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = [ "json" ]} 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.4" }
serde_json = { version = "1.0.59" }
chrono = { version = "0.4", features = ["serde"] }
async-recursion = { version = "1.0.0" }
base64 = { version = "0.13.0" }
thiserror = { version = "1.0" }
csv = "1.1"
regex = "1"
url = "2.2"
