[package]
name = "platform-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = [ "json" ]} 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.4" }
serde_json = { version = "1.0.59" }
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.21.0" }
csv = "1.1"
regex = "1"
platform = { path = "../platform" }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
clap = { version = "4.2.4", features = ["derive", "env"] }
tracing-tree = "0.2.3"

