[package]
name = "platform-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
serde_json = { version = "1.0.128" }
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.22.0" }
csv = "1.3.0"
regex = "1"
platform = { path = "../platform" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.2.4", features = ["derive", "env"] }
tracing-tree = "0.4.0"
