[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = [ "json" ]} 
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-recursion = { version = "1.0.0" }
base64 = { version = "0.13.0" }
thiserror = { version = "1.0" }
url = "2.2"
tracing = "0.1.36"
