[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-recursion = { version = "0.3.2" }             # do not upgrade to 1.0.0+
base64 = { version = "0.22.0" }
thiserror = "1.0"
url = "2.2"
tracing = "0.1.36"
serde_json = "1.0.96"

[lints.rust]
unsafe_code = "forbid"
