[package]
name = "stream-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = [ "json" ]} 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.4" }
serde_json = { version = "1.0.59" }
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.13.0" }
csv = "1.1"
regex = "1"
platform = { path = "../platform" }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }